# openCV-dLib-Cxx

./: LICENSE  README.md  dataStruct.py
faceDetect/: detectFaceDemo.cpp  detectSmileDemo.cpp
imageAlign/: CMakeLists.txt  imageAlign.cpp
imageBasics/: cropResize.cpp  intro_MatTutorial.cpp  readWriteDisplay.cpp  rotate.cpp
imageBasics-II/: drawShape.cpp  guiMouse.cpp  videoRead.cpp  videoWrite.cpp
imageClassify/: CMakeLists.txt  digitClassifierModel.yml  train_digits.cpp
imageTransform/: getAffine.cpp  homography_book.cpp  warpAffine.cpp
objectDetect/: CMakeLists.txt  detectPedestrian.cpp
objectTrack/: CMakeLists.txt  objectTrack  objectTrack.cpp
selectiveSearch/: CMakeLists.txt  selectiveSearch.cpp
warpTriangle/: CMakeLists.txt  warpTriangle.cpp
